--- a/index.html
+++ b/index.html
@@ -417,89 +417,51 @@
     </header>
 
     <main>
-        <section id="about" class="section section-with-bg">
-            <div id="about-particles" class="particles-bg"></div>
-            <div class="container animate-on-scroll">
-                <h2>Best Live Singer in Delhi NCR for Your Special Events</h2>
-                <p>Looking for a <strong>professional wedding singer in Delhi NCR</strong>? With over a decade of experience performing at 500+ events, I specialize in creating the perfect musical atmosphere for weddings, sangeet ceremonies, corporate events, private parties, and intimate gatherings across Delhi, Gurugram, Noida, Ghaziabad, and Faridabad.</p>
-                <p>My versatile repertoire includes <strong>Bollywood hits, Sufi classics, romantic ballads, retro melodies, and contemporary acoustic performances</strong> that will make your event truly unforgettable.</p>
-                
-                <div class="why-choose">
-                    <h3>Why Clients Choose Sagar Raina?</h3>
-                    <div class="benefits-grid">
-                        <div class="benefit-card animate-on-scroll">
-                            <div class="benefit-icon">🏆</div>
-                            <div class="benefit-title">10+ Years Experience</div>
-                            <div class="benefit-text">Performed at 500+ successful events across Delhi NCR</div>
-                        </div>
-                        <div class="benefit-card animate-on-scroll">
-                            <div class="benefit-icon">⭐</div>
-                            <div class="benefit-title">5-Star Rated</div>
-                            <div class="benefit-text">Trusted by 250+ satisfied clients with consistent reviews</div>
-                        </div>
-                        <div class="benefit-card animate-on-scroll">
-                            <div class="benefit-icon">🎵</div>
-                            <div class="benefit-title">Versatile Repertoire</div>
-                            <div class="benefit-text">Bollywood, Sufi, romantic, retro, and acoustic playlist</div>
-                        </div>
-                        <div class="benefit-card animate-on-scroll">
-                            <div class="benefit-icon">🎤</div>
-                            <div class="benefit-title">Professional Setup</div>
-                            <div class="benefit-text">High-quality sound system and equipment arranged if required</div>
-                        </div>
-                        <div class="benefit-card animate-on-scroll">
-                            <div class="benefit-icon">🎼</div>
-                            <div class="benefit-title">Customized Playlists</div>
-                            <div class="benefit-text">Personalized song selection based on your preferences and theme</div>
-                        </div>
-                        <div class="benefit-card animate-on-scroll">
-                            <div class="benefit-icon">📍</div>
-                            <div class="benefit-title">Pan-Delhi NCR Service</div>
-                            <div class="benefit-text">Available across Delhi, Gurugram, Noida, Ghaziabad & beyond</div>
-                        </div>
-                        <div class="benefit-card animate-on-scroll">
-                            <div class="benefit-icon">💼</div>
-                            <div class="benefit-title">Flexible Packages</div>
-                            <div class="benefit-text">Customized packages for weddings, corporate events, and parties</div>
-                        </div>
-                        <div class="benefit-card animate-on-scroll">
-                            <div class="benefit-icon">✅</div>
-                            <div class="benefit-title">Reliable & Punctual</div>
-                            <div class="benefit-text">Professional approach with on-time arrival and coordination</div>
-                        </div>
+        <section id="why-choose" class="section section-with-bg">
+            <div id="why-particles" class="particles-bg"></div>
+            <div class="container">
+                <h2 class="animate-on-scroll">Why Clients Choose Sagar Raina?</h2>
+                <div class="benefits-grid">
+                    <div class="benefit-card animate-on-scroll">
+                        <div class="benefit-icon">🏆</div>
+                        <div class="benefit-title">10+ Years Experience</div>
+                        <div class="benefit-text">Performed at 250+ successful events across Delhi NCR</div>
                     </div>
-                </div>
-            </div>
-
-            <div class="swiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="placeholder1.png" alt="Sagar Raina performing live at a wedding event in Delhi NCR" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder2.png" alt="Sagar Raina singing at a corporate event with acoustic guitar" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder3.png" alt="Live music performance by Sagar Raina at a private party" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder4.png" alt="Sagar Raina entertaining guests at a wedding celebration in Gurugram" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder5.png" alt="Acoustic live singing performance by Sagar Raina at an intimate venue" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder6.png" alt="Sagar Raina performing soulful music at a corporate function" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder7.png" alt="Sagar Raina with acoustic guitar performing at a live music venue" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder8.png" alt="Wedding singer Sagar Raina creating memorable moments in Delhi NCR" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="appreciation.png" alt="Client appreciation and testimonial for Sagar Raina's performance" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder1.png" alt="Sagar Raina performing live at a wedding event in Delhi NCR" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder2.png" alt="Sagar Raina singing at a corporate event with acoustic guitar" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder3.png" alt="Live music performance by Sagar Raina at a private party" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder4.png" alt="Sagar Raina entertaining guests at a wedding celebration in Gurugram" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder5.png" alt="Acoustic live singing performance by Sagar Raina at an intimate venue" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder6.png" alt="Sagar Raina performing soulful music at a corporate function" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder7.png" alt="Sagar Raina with acoustic guitar performing at a live music venue" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder8.png" alt="Wedding singer Sagar Raina creating memorable moments in Delhi NCR" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="appreciation.png" alt="Client appreciation and testimonial for Sagar Raina's performance" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder1.png" alt="Sagar Raina performing live at a wedding event in Delhi NCR" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder2.png" alt="Sagar Raina singing at a corporate event with acoustic guitar" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder3.png" alt="Live music performance by Sagar Raina at a private party" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder4.png" alt="Sagar Raina entertaining guests at a wedding celebration in Gurugram" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder5.png" alt="Acoustic live singing performance by Sagar Raina at an intimate venue" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder6.png" alt="Sagar Raina performing soulful music at a corporate function" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder7.png" alt="Sagar Raina with acoustic guitar performing at a live music venue" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="placeholder8.png" alt="Wedding singer Sagar Raina creating memorable moments in Delhi NCR" width="200" height="300" loading="lazy" decoding="async"></div>
-                    <div class="swiper-slide"><img src="appreciation.png" alt="Client appreciation and testimonial for Sagar Raina's performance" width="200" height="300" loading="lazy" decoding="async"></div>
+                    <div class="benefit-card animate-on-scroll">
+                        <div class="benefit-icon">⭐</div>
+                        <div class="benefit-title">5-Star Rated</div>
+                        <div class="benefit-text">Trusted by 100+ satisfied clients with consistent reviews</div>
+                    </div>
+                    <div class="benefit-card animate-on-scroll">
+                        <div class="benefit-icon">🎵</div>
+                        <div class="benefit-title">Versatile Repertoire</div>
+                        <div class="benefit-text">Bollywood, Sufi, romantic, retro, and acoustic playlist</div>
+                    </div>
+                    <div class="benefit-card animate-on-scroll">
+                        <div class="benefit-icon">🎤</div>
+                        <div class="benefit-title">Professional Setup</div>
+                        <div class="benefit-text">High-quality sound system and equipment arranged if required</div>
+                    </div>
+                    <div class="benefit-card animate-on-scroll">
+                        <div class="benefit-icon">🎼</div>
+                        <div class="benefit-title">Customized Playlists</div>
+                        <div class="benefit-text">Personalized song selection based on your preferences and theme</div>
+                    </div>
+                    <div class="benefit-card animate-on-scroll">
+                        <div class="benefit-icon">📍</div>
+                        <div class="benefit-title">Pan-Delhi NCR Service</div>
+                        <div class="benefit-text">Available across Delhi, Gurugram, Noida, Ghaziabad & beyond</div>
+                    </div>
+                    <div class="benefit-card animate-on-scroll">
+                        <div class="benefit-icon">💼</div>
+                        <div class="benefit-title">Flexible Packages</div>
+                        <div class="benefit-text">Customized packages for weddings, corporate events, and parties</div>
+                    </div>
+                    <div class="benefit-card animate-on-scroll">
+                        <div class="benefit-icon">✅</div>
+                        <div class="benefit-title">Reliable & Punctual</div>
+                        <div class="benefit-text">Professional approach with on-time arrival and coordination</div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -511,7 +473,7 @@
                 <div class="stats-grid">
                     <div class="stat-card animate-on-scroll">
                         <div class="stat-icon">🎤</div>
-                        <div class="stat-number" data-target="10">0</div>
+                        <div class="stat-number">10</div>
                         <div class="stat-label">Years of Experience</div>
                     </div>
                     <div class="stat-card animate-on-scroll">
@@ -597,7 +559,7 @@
         <section id="testimonials" class="section bg-dark">
             <div id="testimonials-particles" class="particles-bg"></div>
             <div class="container">
-                <h2 class="animate-on-scroll">Client Reviews - 5 Star Rated Wedding Singer in Delhi NCR</h2>
+                <h2 class="animate-on-scroll">Client Reviews - 5 Star Rated Singer in Delhi NCR</h2>
                 <p class="animate-on-scroll">Trusted by 1000+ happy clients for weddings, corporate events, and private parties</p>
                 <div class="testimonials-grid">
                     <div class="testimonial-card animate-on-scroll" itemscope itemtype="https://schema.org/Review">
@@ -649,7 +611,7 @@
         <section id="faq" class="section section-with-bg">
             <div id="faq-particles" class="particles-bg"></div>
             <div class="container">
-                <h2 class="animate-on-scroll">Frequently Asked Questions - Booking a Live Singer in Delhi NCR</h2>
+                <h2 class="animate-on-scroll">Frequently Asked Questions</h2>
                 <p class="animate-on-scroll">Everything you need to know about hiring Sagar Raina for your wedding or event</p>
                 
                 <div class="faq-container" itemscope itemtype="https://schema.org/FAQPage">
@@ -739,7 +701,7 @@
         <section id="contact" class="section bg-dark">
             <div id="contact-particles" class="particles-bg"></div>
             <div class="container">
-                <h2 class="animate-on-scroll">Book Your Event Today - Best Live Singer in Delhi NCR</h2>
+                <h2 class="animate-on-scroll">Book Your Event Today</h2>
                 <p class="animate-on-scroll">Ready to bring unforgettable music to your wedding or event? Contact Delhi NCR's most trusted live singer now!</p>
                 <p class="cta-urgent animate-on-scroll">📅 <strong>Limited Availability</strong> - Book Early to Secure Your Preferred Date</p>
                 <div class="contact-details-grid">
