--- a/index.html
+++ b/index.html
@@ -417,55 +417,6 @@
     </header>
 
     <main>
-        <section id="why-choose" class="section section-with-bg">
-            <div id="why-particles" class="particles-bg"></div>
-            <div class="container">
-                <h2 class="animate-on-scroll">Why Clients Choose Sagar Raina?</h2>
-                <div class="benefits-grid">
-                    <div class="benefit-card animate-on-scroll">
-                        <div class="benefit-icon">🏆</div>
-                        <div class="benefit-title">10+ Years Experience</div>
-                        <div class="benefit-text">Performed at 250+ successful events across Delhi NCR</div>
-                    </div>
-                    <div class="benefit-card animate-on-scroll">
-                        <div class="benefit-icon">⭐</div>
-                        <div class="benefit-title">5-Star Rated</div>
-                        <div class="benefit-text">Trusted by 100+ satisfied clients with consistent reviews</div>
-                    </div>
-                    <div class="benefit-card animate-on-scroll">
-                        <div class="benefit-icon">🎵</div>
-                        <div class="benefit-title">Versatile Repertoire</div>
-                        <div class="benefit-text">Bollywood, Sufi, romantic, retro, and acoustic playlist</div>
-                    </div>
-                    <div class="benefit-card animate-on-scroll">
-                        <div class="benefit-icon">🎤</div>
-                        <div class="benefit-title">Professional Setup</div>
-                        <div class="benefit-text">High-quality sound system and equipment arranged if required</div>
-                    </div>
-                    <div class="benefit-card animate-on-scroll">
-                        <div class="benefit-icon">🎼</div>
-                        <div class="benefit-title">Customized Playlists</div>
-                        <div class="benefit-text">Personalized song selection based on your preferences and theme</div>
-                    </div>
-                    <div class="benefit-card animate-on-scroll">
-                        <div class="benefit-icon">📍</div>
-                        <div class="benefit-title">Pan-Delhi NCR Service</div>
-                        <div class="benefit-text">Available across Delhi, Gurugram, Noida, Ghaziabad & beyond</div>
-                    </div>
-                    <div class="benefit-card animate-on-scroll">
-                        <div class="benefit-icon">💼</div>
-                        <div class="benefit-title">Flexible Packages</div>
-                        <div class="benefit-text">Customized packages for weddings, corporate events, and parties</div>
-                    </div>
-                    <div class="benefit-card animate-on-scroll">
-                        <div class="benefit-icon">✅</div>
-                        <div class="benefit-title">Reliable & Punctual</div>
-                        <div class="benefit-text">Professional approach with on-time arrival and coordination</div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <section id="stats" class="section bg-dark">
             <div id="stats-particles" class="particles-bg"></div>
             <div class="container">
@@ -556,11 +507,60 @@
             </div>
         </section>
 
+        <section id="why-choose" class="section bg-dark">
+            <div id="why-particles" class="particles-bg"></div>
+            <div class="container">
+                <h2 class="animate-on-scroll">Why Clients Choose Sagar Raina?</h2>
+                <div class="benefits-grid">
+                    <div class="benefit-card animate-on-scroll">
+                        <div class="benefit-icon">🏆</div>
+                        <div class="benefit-title">10+ Years Experience</div>
+                        <div class="benefit-text">Performed at 250+ successful events across Delhi NCR</div>
+                    </div>
+                    <div class="benefit-card animate-on-scroll">
+                        <div class="benefit-icon">⭐</div>
+                        <div class="benefit-title">5-Star Rated</div>
+                        <div class="benefit-text">Trusted by 100+ satisfied clients with consistent reviews</div>
+                    </div>
+                    <div class="benefit-card animate-on-scroll">
+                        <div class="benefit-icon">🎵</div>
+                        <div class="benefit-title">Versatile Repertoire</div>
+                        <div class="benefit-text">Bollywood, Sufi, romantic, retro, and acoustic playlist</div>
+                    </div>
+                    <div class="benefit-card animate-on-scroll">
+                        <div class="benefit-icon">🎤</div>
+                        <div class="benefit-title">Professional Setup</div>
+                        <div class="benefit-text">High-quality sound system and equipment arranged if required</div>
+                    </div>
+                    <div class="benefit-card animate-on-scroll">
+                        <div class="benefit-icon">🎼</div>
+                        <div class="benefit-title">Customized Playlists</div>
+                        <div class="benefit-text">Personalized song selection based on your preferences and theme</div>
+                    </div>
+                    <div class="benefit-card animate-on-scroll">
+                        <div class="benefit-icon">📍</div>
+                        <div class="benefit-title">Pan-Delhi NCR Service</div>
+                        <div class="benefit-text">Available across Delhi, Gurugram, Noida, Ghaziabad & beyond</div>
+                    </div>
+                    <div class="benefit-card animate-on-scroll">
+                        <div class="benefit-icon">💼</div>
+                        <div class="benefit-title">Flexible Packages</div>
+                        <div class="benefit-text">Customized packages for weddings, corporate events, and parties</div>
+                    </div>
+                    <div class="benefit-card animate-on-scroll">
+                        <div class="benefit-icon">✅</div>
+                        <div class="benefit-title">Reliable & Punctual</div>
+                        <div class="benefit-text">Professional approach with on-time arrival and coordination</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="testimonials" class="section bg-dark">
             <div id="testimonials-particles" class="particles-bg"></div>
             <div class="container">
                 <h2 class="animate-on-scroll">Client Reviews - 5 Star Rated Singer in Delhi NCR</h2>
-                <p class="animate-on-scroll">Trusted by 1000+ happy clients for weddings, corporate events, and private parties</p>
+                <p class="animate-on-scroll">Trusted by 100+ happy clients for weddings, corporate events, and private parties</p>
                 <div class="testimonials-grid">
                     <div class="testimonial-card animate-on-scroll" itemscope itemtype="https://schema.org/Review">
                         <meta itemprop="itemReviewed" itemscope itemtype="https://schema.org/Service" content="Wedding Singer">
